--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,2 @@
----
 sources:
-  avrdude-6.0.1.tar.gz: b0f440f1b1ba3890da6e5b752003ca99e550e3bf
+  "avrdude-6.3.tar.gz":   c6a84df8f6392b671e546efab42dff64e60cfcab
